fix z-index

--- a/app/globals.css
+++ b/app/globals.css
@@ -19,7 +19,6 @@ body {
   margin: 0;
   box-sizing: border-box;
   font-family: "kanit", sans-serif;
-  background-color: white;
 }
 @layer utilities {
   .shadow-inner-custom {
